--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
 *{
     box-sizing: border-box;
     color: blue;
+    /* border: 2px solid blue; */
 }
 div{
   color: white;
@@ -19,10 +20,10 @@ div{
   /* padding-top: 20px; */
   box-sizing: border-box;
   display: block;
-  padding-top: 8%;
+  /* padding-top: 8%; */
   font-size: 30px;
   font-weight: 900;
-  color: white;
+  color: black;
   margin-bottom: 1%;
   margin-top: 0%;
 }
@@ -32,15 +33,18 @@ div{
       font-size: 80px;
   }
 }
-.list {
-  box-sizing: border-box;
-  -webkit-text-size-adjust: 100%;
-  line-height: 1.42857143;
-  display: block;
-  color: white;
-  font-size: 30px;
-  margin-bottom: 4%;
-  font-weight: 600;
+.list{
+  border: 0px solid blue;
+    padding-left: 1px;
+    padding-right: 80%;
+    background-color: lightgray;
+    margin-top: auto;
+    margin-left: 50px;
+    margin-right: 60%;
+    box-sizing: border-box;
+    padding: 1%;
+    padding-right: 4%;
+    color: white;
 }
 
 @media screen and (min-width: 601px) {
@@ -52,11 +56,14 @@ div{
 .header {
   box-sizing: border-box;
   display: block;
-  padding-top: 8%;
+  /* padding-top: 8%; */
   font-size: 30px;
   font-weight: 900;
   color: white;
-  margin-bottom: 1%;
+  margin-bottom: 0%;
+  /* background-color: aqua; */
+  color: #000;
+  
   
 }
 
@@ -64,4 +71,7 @@ div{
   div.example {
       font-size: 80px;
   }
+}
+.wrapper{
+  
 }
